<resources>
    <string name="app_name">Blood Doner</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_status1">You can save someone life.</string>
    <string name="app_status2">Approximately every 5 minutes someone needs blood.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_your_address">Select your address</string>
    <string name="select_your_blood_group">Blood Group</string>
    <string name="profile">Profile</string>
    <string name="request">Request</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="location">Location</string>
    <string name="change_language">Change language</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="edit">Edit profile</string>
    <string name="delete">Delete account</string>
    <string name="input_error_fName"> First name is empty</string>
    <string name="input_error_lName"> Last name is empty</string>
    <string name="input_error_password"> Password is empty</string>
    <string name="input_error_confirm_password"> Confirm Password is empty</string>
    <string name="input_error_not_match_password"> Confirm Password not match</string>
    <string name="input_error_email"> Email is empty</string>
    <string name="input_error_date_of_birth"> Date of birth is empty</string>
    <string name="input_error_location"> Location is empty</string>
    <string name="input_error_email_invalidate"> Email is invalidate</string>
    <string name="input_error_phone"> Phone is empty</string>
    <string name="input_error_phone_incorrect"> Phone is incorrect</string>


    <string-array name="cities">
        <item>Cairo</item>
        <item> Alexandria</item>
        <item>Hurghada</item>
        <item>Sharm El shiek</item>
        <item> Marsa Matrouh</item>
        <item> Elfayoum</item>
        <item>Luxor</item>
        <item>Aswan</item>
        <item>Port Said</item>
        <item>Ismailia</item>
        <item>Al arish</item>
        <item>Suez</item>
        <item>Damietta</item>
        <item>Fayed</item>
    </string-array>
    <string-array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
