<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.basmet.blooddoner.UI.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:src="@drawable/profile_image"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            android:onClick="selectImageFromGallery"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_margin="10dp"
        android:hint="@string/first_name"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/first_name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableStart="@drawable/ic_person_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/last_name"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/last_name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableStart="@drawable/ic_person_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:id="@+id/ed_email"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:drawableStart="@drawable/ic_mail_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/phone"
        android:gravity="center"
        android:inputType="phone"
        android:maxLines="1"
        android:id="@+id/phone"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableStart="@drawable/ic_phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:id="@+id/ed_password"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/confirm_password"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:id="@+id/confirm_password"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:layout_margin="10dp"
        android:hint="@string/date_of_birth"
        android:gravity="center"
        android:inputType="date"
        android:id="@+id/date_of_birth"
        android:drawableRight="@drawable/ic_select_date_black_24dp"
        android:drawableEnd="@drawable/ic_select_date_black_24dp"
        android:onClick="selectDateOfBirth"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/location"
        android:gravity="center"
        android:drawableRight="@drawable/ic_add_location_black_24dp"
        android:drawableEnd="@drawable/ic_add_location_black_24dp"
        android:maxLines="1"
        android:id="@+id/location"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="@dimen/ed_text_height"
            android:text="@string/gender"
            android:gravity="center"
            android:id="@+id/txt_gender"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/txt_gender"
            android:layout_toEndOf="@+id/txt_gender">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ed_text_height"
                android:text="@string/female"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ed_text_height"
                android:text="@string/male" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ed_text_height"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/select_your_address"
            android:id="@+id/txt_address"
            android:layout_below="@+id/txt_gender"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="@dimen/ed_text_height"
            android:id="@+id/spinner_city"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/txt_address"
            android:layout_toEndOf="@+id/txt_address"
            android:layout_below="@+id/txt_gender"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ed_text_height"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/select_your_blood_group"
            android:id="@+id/txt_blood_group"
            android:layout_alignParentBottom="@+id/txt_address"
            android:layout_below="@+id/txt_address" />
        <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/spinner_blood_group"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_toRightOf="@id/txt_blood_group"
            android:layout_toEndOf="@id/txt_blood_group"
            android:layout_below="@+id/txt_address"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/ed_text_height"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_login"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button_sign_up"/>




</LinearLayout>
</ScrollView>