<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.basmet.blooddoner.UI.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/edit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:drawableLeft="@drawable/ic_edit_black_24dp"
        android:drawableStart="@drawable/ic_edit_black_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/text_view_settings"
        android:gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_view_height"
            android:text="@string/change_language"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorAccent"
            android:drawableLeft="@drawable/ic_language_black_24dp"
            android:drawableStart="@drawable/ic_language_black_24dp"
            android:drawablePadding="10dp"
            android:background="@drawable/text_view_settings"
            android:gravity="center_vertical"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/delete"
        android:textColor="@color/colorAccent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_delete_black_24dp"
        android:drawableStart="@drawable/ic_delete_black_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/text_view_settings"
       android:gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_view_height"
            android:text="@string/log_out"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/text_view_settings"
            android:gravity="center_vertical"/>

    </LinearLayout>
</FrameLayout>
