<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.basmet.blooddoner.UI.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/profile_image"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ed_text_height"
                android:hint="@string/user_name"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ed_text_height"
                android:hint="@string/email"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:drawableStart="@drawable/ic_mail_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ed_text_height"
                android:hint="@string/phone"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ed_text_height"
                android:hint="@string/location"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="5dp"/>


        </LinearLayout>

    </FrameLayout>


</ScrollView>
